apollo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apollo
  template:
    metadata:
      labels:
        app: apollo
    spec:
      containers:
      - name: apollo
        image:  vedangparasnis/apollographql:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        command: ['node']
        args: ['app.js']
        ports:
        - containerPort: 4000 
      
---
apiVersion: v1
kind: Service
metadata:
  name: apollo-service
spec:
  selector:
    app: apollo
  ports:
  - port:  3000
    targetPort: 4000
