postgres-config.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  labels:
    info: postgres-db
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 2
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgres-db
        volumeMounts:
        - name: pv-data
          mountPath: /var/lib/postgresql/
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: postgresvolume-claim

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
#  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 4200
    targetPort: 5432
