ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  rules:
  - host: nifi-cluster.ssnc-corp.cloud
  - http:
      paths:
      - path: /graphql
        backend:
          serviceName: apollo-service
          servicePort: 3000
      - path: /minio
        backend:
          serviceName: minio-service 
          servicePort: 5000
